--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -1,22 +1,6 @@
 pipeline {
     agent any
-    triggers {
-        // Set nightly triggers
-        cron((BRANCH_NAME == "master" || BRANCH_NAME == "develop") ? "H H(21-22) * * 1-5" : "")
-    }
-    // Checkbox parameters for users to skip steps and control pipeline behavior
-    parameters {
-        // TODO: Need logic to reuse VM.  Current logic destroys it every run
-        //booleanParam(name: 'Destroy_VM (Coming Soon)',
-        //    defaultValue: true)
-        booleanParam(name: 'Static_analysis', defaultValue: true)
-        booleanParam(name: 'License_headers', defaultValue: true)
-        booleanParam(name: 'Configure_Tests', defaultValue: false)
-        booleanParam(name: 'Core_tests', defaultValue: true)
-        booleanParam(name: 'Services_tests', defaultValue: true)
-        booleanParam(name: 'UI_tests', defaultValue: true)
-        string(name: 'Box', defaultValue: 'hoot_centos7', description: 'Vagrant Box')
-    }
+   
     stages {
         stage("Setup") {
             steps {
@@ -34,7 +18,6 @@ pipeline {
         // and publish results
         stage("Static Analysis") {
             when { 
-                expression { return params.Static_analysis }
                 not { branch 'PR-*' }
             }
             steps {
@@ -43,7 +26,6 @@ pipeline {
         }
         stage("License Header") {
             when {
-                expression { return params.License_headers }
                 not { branch 'PR-*' }
             }
             steps {
@@ -62,62 +44,22 @@ pipeline {
         stage("Vagrant Up") {
             steps {
                 // NOTE: Only installs hoot build dependencies
-                sh "vagrant up ${params.Box} --provision-with software,hoot --provider aws"
+                sh "vagrant up ${params.Box} --no-provision --provider aws"
             }       
         }
-        stage("Test Configure") {
-            when { 
-                anyOf {
-                    expression { return params.Configure_Tests }
-                    // Work around to run configuration tests during nightly cron triggers but not on commits to develop.  Logic can be udpated
-                    // once this https://issues.jenkins-ci.org/browse/JENKINS-41272 is implemented
-                    expression { return Calendar.instance.get(Calendar.HOUR_OF_DAY) in 21..23 }
-                }
-                not { branch 'PR-*' }
-            }
+        stage("Core Tests") {      
             steps {
-                // Run configuration tests
-                sh "vagrant ssh ${params.Box} -c 'cd hoot; source ./SetupEnv.sh; ./scripts/TestConfigure.sh &> Hoot_Config_Test || { cat Hoot_Config_Test; false; }'"
-            }
-        }
-        stage("Vagrant Provision") {
-            steps {
-                // NOTE: Ubuntu only, may need more complex logic if other OS are included in pipeline
-                sh '''
-                    cp LocalConfig.pri.orig LocalConfig.pri
-                    echo "QMAKE_CXXFLAGS += -Werror" >> LocalConfig.pri
-                    sed -i s/"QMAKE_CXX=g++"/"#QMAKE_CXX=g++"/g LocalConfig.pri
-                    sed -i s/"#QMAKE_CXX=ccache g++"/"QMAKE_CXX=ccache g++"/g LocalConfig.pri
-                '''
-                
-                // Perform remainder of provisioning
-                sh "vagrant provision ${params.Box} --provision-with build,EGD,tomcat,mapnik,hadoop"
-            }       
-        }
-        stage("Core Tests") {
-            when {
-                expression { return params.Core_tests }
-            }
-            steps {
-                sh "vagrant ssh ${params.Box} -c 'cd hoot; source ./SetupEnv.sh; hoot --version --debug; export HOOT_TEST_DIFF=--diff; bin/HootTest \$HOOT_TEST_DIFF --glacial --parallel \$(nproc)'"
+                echo 'Core Tests'
             }
         }
         stage("Services Tests") {
-            when {
-                expression { return params.Services_tests }
-            }
             steps {
-                sh "vagrant ssh ${params.Box} -c 'cd hoot; make -sj`nproc` pp-test'"
-                sh "vagrant ssh ${params.Box} -c 'cd hoot; make -sj`nproc` plugins-test'"
-                sh "vagrant ssh ${params.Box} -c 'cd hoot; make -sj`nproc` services-test'"
+                echo 'Service Tests'
             }
         }
         stage("UI Tests") {
-            when {
-                expression { return params.UI_tests }
-            }
             steps {
-                sh "vagrant ssh ${params.Box} -c 'cd hoot; make -s ui-test'"
+                echo 'UI Tests'
             }
         }
     }
@@ -132,18 +74,12 @@ pipeline {
                 // Check to see if we failed last time
                 if (currentBuild.previousBuild.result == 'FAILURE') {
                     // Copy over any UI failure screenshots
-                    sh "vagrant scp ${params.Box}:~/hoot/test-files/ui/screenshot_*.png ./test-files/ui/"
                     emailext (
-                        to: '$DEFAULT_RECIPIENTS',
+                        to: 'seth.putnam@digitalglobe.com',
                         subject: "Still Failing: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
                         mimeType: 'text/html',
-                        attachmentsPattern: 'test-files/ui/screenshot_*.png',
                         body: """<p>Failure: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-                            <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>""",
-                            recipientProviders: [
-                                [$class: 'DevelopersRecipientProvider'],
-                                [$class: 'CulpritsRecipientProvider'],
-                                [$class: 'RequesterRecipientProvider']]
+                            <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""      
                     )
                 }
             }
@@ -153,31 +89,20 @@ pipeline {
                 // Job has been fixed
                 if (currentBuild.currentResult == 'SUCCESS') {
                     emailext (
-                        to: '$DEFAULT_RECIPIENTS',
+                        to: 'seth.putnam@digitalglobe.com,
                         subject: "Back to normal: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
                         mimeType: 'text/html',
-                        attachmentsPattern: 'test-files/ui/screenshot_*.png',
                         body: """<p>Fixed: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-                            <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>""",
-                            recipientProviders: [
-                                [$class: 'DevelopersRecipientProvider'],
-                                [$class: 'CulpritsRecipientProvider'],
-                                [$class: 'RequesterRecipientProvider']]
+                            <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
                         )
                 } else  if (currentBuild.currentResult == 'FAILURE') {
-                    // Copy over any UI failure screenshots
-                    sh "vagrant scp ${params.Box}:~/hoot/test-files/ui/screenshot_*.png ./test-files/ui/"
                     emailext (
-                        to: '$DEFAULT_RECIPIENTS',
+                        to: 'seth.putnam@digitalglobe.com',
                         subject: "Failed: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
                         mimeType: 'text/html',
-                        attachmentsPattern: 'test-files/ui/screenshot_*.png',
                         body: """<p>Fixed: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
-                        <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>""",
-                            recipientProviders: [
-                                [$class: 'DevelopersRecipientProvider'],
-                                [$class: 'CulpritsRecipientProvider'],
-                                [$class: 'RequesterRecipientProvider']]
+                        <p>Check console output at &QUOT;<a href='${env.BUILD_URL}'>${env.JOB_NAME} [${env.BUILD_NUMBER}]</a>&QUOT;</p>"""
+                        
                     )
                 }
             }
