--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-   
+    parameters {
+        booleanParam(name: 'Fail_step', defaultValue: false)
+    }
     stages {
         stage("Setup") {
             steps {
@@ -17,17 +19,11 @@ pipeline {
         // Need to expand this step to more robust static analysis scanning with SonarQube
         // and publish results
         stage("Static Analysis") {
-            when { 
-                not { branch 'PR-*' }
-            }
             steps {
                 sh 'cppcheck --enable=all --inconclusive --xml-version=2 --verbose --check-config . 2> cppcheck.xml'
             }
         }
         stage("License Header") {
-            when {
-                not { branch 'PR-*' }
-            }
             steps {
                 script {
                     try {
@@ -50,6 +46,9 @@ pipeline {
         stage("Core Tests") {      
             steps {
                 echo 'Core Tests'
+                if (params.Fail_step) {
+                    currentBuild.result = 'FAILURE'
+                }
             }
         }
         stage("Services Tests") {
@@ -89,7 +88,7 @@ pipeline {
                 // Job has been fixed
                 if (currentBuild.currentResult == 'SUCCESS') {
                     emailext (
-                        to: 'seth.putnam@digitalglobe.com,
+                        to: 'seth.putnam@digitalglobe.com',
                         subject: "Back to normal: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
                         mimeType: 'text/html',
                         body: """<p>Fixed: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]':</p>
