Update error statement

--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
             }
             steps {
                 script {
-                    currentBuild.result = 'FAILURE'
+                    error("Build failed because I failed it")
                 }
             }
         }
